Mobile: Fix nav link contrast

--- a/_sass/_navbar.scss
+++ b/_sass/_navbar.scss
@@ -18,7 +18,7 @@
         text-transform: uppercase;
         letter-spacing: 2px;
         pointer-events: auto;
-        color: var(--secondary);
+        color: var(--navbar__menu-link);
 
         &.active, &:hover {
             color: var(--primary);
@@ -26,6 +26,7 @@
 
         @include for-size(md-up) {
             padding: 0;
+            color: var(--secondary);
         }
     }
 
