--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -30,6 +30,7 @@ $base-100: tint($base, 100%);
     --body__bg: #{$base};
     --body: #{$base-60};
     --navbar__menu-bg: #{$base-10};
+    --navbar__menu-link: #{$base-70};
     --footer__copyright: #{$base-50};
     --section__title: #{$base-60};
     --portfolio__bg: #{$base-5};
@@ -44,6 +45,7 @@ $base-100: tint($base, 100%);
     --body__bg: #{$base-100};
     --body: #{$base-40};
     --navbar__menu-bg: #{$base-90};
+    --navbar__menu-link: #{$base-50};
     --footer__copyright: #{$base-70};
     --section__title: #{$base-70};
     --portfolio__bg: #{$base-95};
